package sokoban.model;

public class Box {
}
