package sokoban.model;

public class Target {
}
