package sokoban.model.api;

public abstract class Board {
}
