package sokoban.model.cell;

public abstract class Cell {
}
