@startuml

skinparam classAttributeIconSize 0
skinparam defaultFontName Consolas
!pragma useIntermediatePackages false

/' CREATION DES CLASSES ET RELATIONS DE BASE '/
class SokobanApp {
}
package model {
    abstract class Board {
    }

    class Board4Play {
    }

    Board <|-- Board4Play

    class Board4Design {
    }

    Board <|-- Board4Design

    abstract class Grid {
    }

    class Grid4Play {
    }

    Grid <|-- Grid4Play

    class Grid4Design {
    }

    Grid <|-- Grid4Design

    abstract class Cell {
    }

    class Cell4Play {
    }

    Cell <|-- Cell4Play

    class Cell4Design {
    }

    Cell <|-- Cell4Design

    abstract class ElementStack {
    }

    class ElementStack4Play {
    }

    ElementStack <|-- ElementStack4Play

    class ElementStack4Design {
    }

    ElementStack <|-- ElementStack4Design

    abstract class GameObject {
    }

    class Wall {
    }

    GameObject <|-- Wall

    class Box {
    }

    GameObject <|-- Box

    class Player {
    }

    GameObject <|-- Player

    class Target {
    }

    GameObject <|-- Target

    class Ground {
    }

    GameObject <|-- Ground
}

package view {
    abstract class BoardView {
    }

    class BoardView4Play {
    }

    BoardView <|-- BoardView4Play

    class BoardView4Design {
    }

    BoardView <|-- BoardView4Design

    abstract class GridView {
    }

    class GridView4Play {
    }

    GridView <|-- GridView4Play

    class GridView4Design {
    }

    GridView <|-- GridView4Design

    abstract class CellView {
    }

    class CellView4Play {
    }

    CellView <|-- CellView4Play

    class CellView4Design {
    }

    CellView <|-- CellView4Design

    class MenuView {
    }

    class ToolView {
    }
}

package viewmodel {
    abstract class BoardViewModel {
    }

    class BoardViewModel4Play {
    }

    BoardViewModel <|-- BoardViewModel4Play

    class BoardViewModel4Design {
    }

    BoardViewModel <|-- BoardViewModel4Design

    abstract class GridViewModel {
    }

    class GridViewModel4Play {
    }

    GridViewModel <|-- GridViewModel4Play

    class GridViewModel4Design {
    }

    GridViewModel <|-- GridViewModel4Design

    abstract class CellViewModel {
    }

    class CellViewModel4Play {
    }

    CellViewModel <|-- CellViewModel4Play

    class CellViewModel4Design {
    }

    CellViewModel <|-- CellViewModel4Design

    class MenuViewModel {
    }

    class ToolViewModel {
    }
}

/' RELATIONS '/

@enduml